--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
           <div class="container">
             <div class="page1__wrapper">
               <div class="header">
-                <img class="header__logo" src="/img/logo.png" alt="">
+                <img class="header__logo" src="./img/logo.png" alt="">
                 <ul class="header__info">
                   <li class="header__info-email">
-                    <img src="/img/icons/email-info.png" alt="info@compressorua.com">
+                    <img src="img/icons/email-info.png" alt="info@compressorua.com">
                     <a href="email:info@compressorua.com">info@compressorua.com</a>
                   </li>
                   <li class="header__info-phone">
-                    <img src="/img/icons/phone-info.png" alt="050 345 4030">
+                    <img src="img/icons/phone-info.png" alt="050 345 4030">
                     <a href="tel:050 345 4030">050 345 4030</a>
                   </li>
                   <li class="header__info-phone">
-                    <img src="/img/icons/phone-info.png" alt="067 535 4030">
+                    <img src="img/icons/phone-info.png" alt="067 535 4030">
                     <a href="tel:067 535 4030">067 535 4030</a>
                   </li>
                 </ul>
@@ -46,7 +46,7 @@
                 <label class="page1__inp inp--file"  for="formImage">
                   <span>Фото компрессора</span> 
                   <div id="formPreview">
-                    <img src="/img/icons/icons8-upload_to_cloud.png" for="file">
+                    <img src="img/icons/icons8-upload_to_cloud.png" for="file">
                   </div>
                 </label>
                 <div class="inp--code">
