--- a/index.html
+++ b/index.html
@@ -97,6 +97,6 @@
             </div>
           </div>
         </div>
-  <script src="js/style.js"></script>
+  <script src="style.js"></script>
   </body>
 </html>
