--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <p><span>Всего за 15 минут!</span></p>
                 <p><span>С консультацией сервис-инженера!</span></p>
               </div>
-              <form class="page1__call-back" id="form" action="http://formspree.io/you@email.com">
+              <form class="page1__call-back" id="form" action="#">
                 <h3 class="page1__call-back-title">Подобрать фильтр</h3>
                 <input type="file" accept='.jpg, .png' name="image" id='formImage'>
                 <label class="page1__inp inp--file"  for="formImage">
@@ -97,6 +97,6 @@
             </div>
           </div>
         </div>
-  <script src="script.js"></script>
+  <script src="js/script.js"></script>
   </body>
 </html>
