--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                   </li>
                 </ul>
               </div>
-              <h1 class="page1__title"><span class="blue">Безошибочный</span>
+              <h1 class="page1__title "><span class="blue">Безошибочный</span>
                 подбор фильтров к компрессорам</h1>
               <div class="page1__text border-angle">
                 <p><span>3 варианта на любой бюджет!</span></p>
@@ -68,9 +68,9 @@
           <div class="container">
             <div class="page2__wrapper">
               <div class="page2__text">
-                <h2 class="page2__text-title">нам доверяют тысячи
+                <h2 class="page2__text-title _anim-items">нам доверяют тысячи
                   украинскиих предприятий</h2>
-                <div class="page2__text-border border-angle">
+                <div class="page2__text-border border-angle _anim-items">
                   <span class="blue">90% в наличии
                     на складе</span>
                 </div>
